cleaned out StringExercises code